--- a/index.html
+++ b/index.html
@@ -1,19 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="App.js"></script>
-    <script src="Queries.js"></script>
-    <script src="Visualizations.js"></script>
-    <script src="Login.js"></script>
-
-</head>
-<body onload="renderLoginPage()">
-    <div class="pageContent"></div>
-    <div class="serverResponse"></div>
-</body>
-</html>
+Hello World
